# trino-mcp

./: .env.example  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/api/: server.py
src/application/tools/: __init__.py  analyze_queries.py  connection_status.py  describe_table.py  execute_ddl_statements.py  execute_query.py  get_connection_stats.py  list_catalogs.py  list_schemas.py  list_tables.py  trino_tools.py  validate_ddl_statements.py
src/core/: config.py  constants.py  ddl_analyzer.py
src/core/enums/: ddl.py
src/core/utils/: parse.py  validate.py
src/infra/: __init__.py  connection_manager.py
